ingress/ingress-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    # cert-manager.io/cluster-issuer: "letsencrypt-staging"

    # nginx.ingress.kubernetes.io/use-regex: "true"
    # nginx.ingress.kubernetes.io/rewrite-target: /$1

spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - example.com
        - api.example.com
      secretName: tls-secret
  rules:
    - host: example.com
      http:
        paths:
          # - pathType: ImplementationSpecific
          #   path: ^/(.*)
          - pathType: Prefix
            path: /
            backend:
              service:
                name: frontend-service
                port:
                  number: 80

          # - pathType: ImplementationSpecific
          #   path: ^/admin/(.*)
          - pathType: Prefix
            path: /admin
            backend:
              service:
                name: admin-frontend-service
                port:
                  number: 80

    - host: api.example.com
      http:
        paths:
          # - pathType: ImplementationSpecific
          #   path: /?(.*)
          - pathType: Prefix
            path: /
            backend:
              service:
                name: api-service
                port:
                  number: 8080
